--- a/kawn_subscriptions_manager/templates/subscriptions/subscription_plans/form_subscription_plan.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/subscription_plans/form_subscription_plan.html
@@ -19,16 +19,11 @@
                 <input type="hidden" name="next" value="{{ next }}">
                 {{ form|crispy }}
                 <button type="submit" class="btn bg-gradient-info col-md-2 mt-4 mb-0">SAVE</button>
+                <a href="{% url 'subscriptions:list_subscription_plan'  %}" class="btn bg-gradient-danger col-md-2 mt-4 mb-0">CANCEL</a> 
               </form>
             </div>
           </div>
           <div class="col-lg-5 ms-auto text-center mt-5 mt-lg-0">
-            <!-- <div class="bg-gradient-primary border-radius-lg h-100">
-              <img src="../assets/img/shapes/waves-white.svg" class="position-absolute h-100 w-50 top-0 d-lg-block d-none" alt="waves">
-              <div class="position-relative d-flex align-items-center justify-content-center h-100">
-                <img class="w-100 position-relative z-index-2 pt-4" src="../assets/img/illustrations/rocket-white.png" alt="rocket">
-              </div>
-            </div> -->
           </div>
         </div>
       </div>
