--- a/kawn_subscriptions_manager/static/css/soft-ui-dashboard.css
+++ b/kawn_subscriptions_manager/static/css/soft-ui-dashboard.css
@@ -10528,7 +10528,7 @@ fieldset:disabled .btn {
 }
 
 .text-info {
-  color: #17c1e8 !important;
+  color: #0094C9 !important;
 }
 
 .text-warning {
