--- a/kawn_subscriptions_manager/templates/clients/form_outlet.html
+++ b/kawn_subscriptions_manager/templates/clients/form_outlet.html
@@ -19,6 +19,7 @@
                                 <input type="hidden" name="next" value="{{ next }}">
                                 {{ form|crispy }}
                                 <button type="submit" class="btn bg-gradient-info col-md-2 mt-4 mb-0">SAVE</button>
+                                <a href="{% url 'clients:list_outlet'  %}" class="btn bg-gradient-danger col-md-2 mt-4 mb-0">CANCEL</a> 
                             </form>
                         </div>
                     </div>
