--- a/kawn_subscriptions_manager/templates/clients/sales/list_outlet_client.html
+++ b/kawn_subscriptions_manager/templates/clients/sales/list_outlet_client.html
@@ -24,8 +24,7 @@
                             <h5 class="font-weight-bolder d-inline p-lg-2">{{ name.name }}'s Outlets</h5>
                         </div>
                         <div>
-                            <a href="{% url 'clients:add_outlet_client' pk %}" class="btn bg-gradient-info col-md-2 mt-2">Add
-                                New Outlet</a>
+                            <a href="{% url 'clients:add_outlet_client' pk %}" class="btn bg-gradient-info mt-2">Add</a>
                         </div>
                     </div>
                 </div>
