--- a/kawn_subscriptions_manager/templates/subscriptions/list_subscription.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/list_subscription.html
@@ -22,7 +22,7 @@
           </div>
           {% endfor %}
           <div class="align-middle">
-            <h6>Client Susbcriptions</h6>
+            <h5 class="font-weight-bolder">Client Susbcriptions</h5>
           </div>
           <div class="col-lg-12 mb-4 mt-2">
             <form method="get">
