--- a/kawn_subscriptions_manager/templates/subscriptions/sales/list_subscription.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/sales/list_subscription.html
@@ -22,9 +22,8 @@
           </div>
           {% endfor %}
           <div class="align-middle">
-            <h6>Client Susbcriptions</h6>
-            <a href="{% url 'subscriptions:add_subscription' %}" class="btn bg-gradient-info col-md-2 mt-2">Add
-              Subscription</a>
+            <h5 class="font-weight-bolder">Client Susbcriptions</h5>
+            <a href="{% url 'subscriptions:add_subscription' %}" class="btn bg-gradient-info mt-2">Add</a>
               <div class="col-lg-12 mb-4 mt-2">
                 <form method="get">
                   <div class="row">
