--- a/kawn_subscriptions_manager/templates/partials/sidebar.html
+++ b/kawn_subscriptions_manager/templates/partials/sidebar.html
@@ -15,7 +15,7 @@
     <div class="sidenav  w-auto " id="sidenav-collapse-main">
         <ul class="navbar-nav">
             <li class="nav-item mt-3">
-                <h6 class="ps-4 ms-2 text-uppercase text-xs font-weight-bolder opacity-6">Main</h6>
+                <h6 class="ps-4 ms-2 text-uppercase font-weight-bolder">Main</h6>
             </li>
             {% url 'home' as home %}
             <li class="nav-item">
@@ -47,21 +47,8 @@
                     <span class="nav-link-text ms-1">Outlets</span>
                 </a>
             </li>
-            {% if request.user.type == "ADMIN" %}
-            {% url 'users:list_users' as list_users %}
-            <li class="nav-item">
-                <a class="nav-link  {% if request.get_full_path == list_users %}active{% endif %}"
-                    href="{% url 'users:list_users'%}">
-                    <div
-                        class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
-                        <i class="fa-solid fa-people-group"></i>
-                    </div>
-                    <span class="nav-link-popeo ms-1">Users</span>
-                </a>
-            </li>
-            {% endif %}
             <li class="nav-item mt-3">
-                <h6 class="ps-4 ms-2 text-uppercase text-xs font-weight-bolder opacity-6">Settings</h6>
+                <h6 class="ps-4 ms-2 text-uppercase font-weight-bolder">Settings</h6>
             </li>
             <li class="nav-item">
                 <a class="nav-link  {% if 'subscription_plan/' in request.get_full_path %} active {% endif %}"
@@ -83,6 +70,19 @@
                     <span class="nav-link-text ms-1">Subscriptions</span>
                 </a>
             </li>
+            {% if request.user.type == "ADMIN" %}
+            {% url 'users:list_users' as list_users %}
+            <li class="nav-item">
+                <a class="nav-link  {% if request.get_full_path == list_users %}active{% endif %}"
+                    href="{% url 'users:list_users'%}">
+                    <div
+                        class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
+                        <i class="fa-solid fa-people-group"></i>
+                    </div>
+                    <span class="nav-link-popeo ms-1">Users</span>
+                </a>
+            </li>
+            {% endif %}
             {% url 'users:profile_users' as profile_users %}
             <li class="nav-item">
                 <a class="nav-link  {% if request.get_full_path == profile_users %}active{% endif %}"
