--- a/kawn_subscriptions_manager/templates/subscriptions/subscription_plans/list_subscription_plan.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/subscription_plans/list_subscription_plan.html
@@ -20,7 +20,7 @@
         </div>
         {% endfor %}
         <div>
-          <h6>Susbcription Plans</h6>
+          <h5 class="font-weight-bolder">Susbcription Plans</h5>
           <a href="{% url 'subscriptions:add_subscription_plan' %}" class="btn bg-gradient-info mt-2">Add</a>
         </div>
         <div class="col-lg-12 mb-4 mt-2">
@@ -69,19 +69,19 @@
                   <p class="text-xs font-weight-bold mb-0">{{ data.name }}</p>
                 </td>
                 <td class="px-4">
-                  <p class="text-xs font-weight-bold mb-0 text-end">{{ data.trial_period }} Month</p>
+                  <p class="text-xs font-weight-bold mb-0 text-end">{{ data.trial_period|default_if_none:"-" }} Month</p>
                 </td>
                 <td class="px-4">
                   <p class="text-xs font-weight-bold mb-0 text-end">Rp {{ data.price|intcomma }}</p>
                 </td>
                 <td class="px-4">
-                  <p class="text-xs font-weight-bold mb-0">{{ data.get_trial_unit_display }}</p>
+                  <p class="text-xs font-weight-bold mb-0">{{ data.get_trial_unit_display|default_if_none:"-" }}</p>
                 </td>
                 <td class="px-4">
-                  <p class="text-xs font-weight-bold mb-0 text-end">{{ data.recurrence_period }}</p>
+                  <p class="text-xs font-weight-bold mb-0 text-end">{{ data.recurrence_period|default_if_none:"-" }}</p>
                 </td>
                 <td class="px-4">
-                  <p class="text-xs font-weight-bold mb-0">{{ data.get_recurrence_unit_display }}</p>
+                  <p class="text-xs font-weight-bold mb-0">{{ data.get_recurrence_unit_display|default_if_none:"-" }}</p>
                 </td>
                 <td class="px-4">
                   {% if data.is_active %}
