Update assets css

--- a/kawn_subscriptions_manager/static/css/soft-ui-dashboard.css
+++ b/kawn_subscriptions_manager/static/css/soft-ui-dashboard.css
@@ -70,7 +70,7 @@
   --bs-border-radius-pill: 50rem;
   --bs-heading-color: #344767;
   --bs-link-color: #cb0c9f;
-  --bs-link-hover-color: #830866;
+  --bs-link-hover-color: #0094c9;
   --bs-code-color: #d63384;
   --bs-highlight-bg: #fcf8e3;
 }
@@ -3961,7 +3961,7 @@ fieldset:disabled .btn {
   --bs-btn-color: #cb0c9f;
   --bs-btn-bg: transparent;
   --bs-btn-border-color: transparent;
-  --bs-btn-hover-color: #830866;
+  --bs-btn-hover-color: #0094c9;
   --bs-btn-hover-border-color: transparent;
   --bs-btn-active-border-color: transparent;
   --bs-btn-disabled-color: #6c757d;
@@ -5525,10 +5525,10 @@ fieldset:disabled .btn {
   --bs-pagination-border-width: 1px;
   --bs-pagination-border-color: #dee2e6;
   --bs-pagination-border-radius: 0.5rem;
-  --bs-pagination-hover-color: #830866;
+  --bs-pagination-hover-color: #0094c9;
   --bs-pagination-hover-bg: #e9ecef;
   --bs-pagination-hover-border-color: #dee2e6;
-  --bs-pagination-focus-color: #830866;
+  --bs-pagination-focus-color: #0094c9;
   --bs-pagination-focus-bg: #e9ecef;
   --bs-pagination-focus-box-shadow: 0 0 0 0.2rem rgba(203, 12, 159, 0.25);
   --bs-pagination-active-color: #fff;
